// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Builder padLeft DOUBLE [Simple 2x2] 1`] = `
[
  "╔═════════════╦══════════╗",
  "║     Cell 1-1║  Cell 2-1║",
  "╠═════════════╬══════════╣",
  "║     Cell 1-2║  Cell 2-2║",
  "╚═════════════╩══════════╝",
]
`;

exports[`Builder padLeft HORIZONTAL_DOUBLE_VERTICAL_THIN [Simple 2x2] 1`] = `
[
  "╒═════════════╤══════════╕",
  "│     Cell 1-1│  Cell 2-1│",
  "╞═════════════╪══════════╡",
  "│     Cell 1-2│  Cell 2-2│",
  "╘═════════════╧══════════╛",
]
`;

exports[`Builder padLeft HORIZONTAL_THICK_VERTICAL_THIN [Simple 2x2] 1`] = `
[
  "┍━━━━━━━━━━━━━┯━━━━━━━━━━┑",
  "│     Cell 1-1│  Cell 2-1│",
  "┝━━━━━━━━━━━━━┿━━━━━━━━━━┥",
  "│     Cell 1-2│  Cell 2-2│",
  "┕━━━━━━━━━━━━━┷━━━━━━━━━━┙",
]
`;

exports[`Builder padLeft HORIZONTAL_THIN_VERTICAL_DOUBLE [Simple 2x2] 1`] = `
[
  "╓─────────────╥──────────╖",
  "║     Cell 1-1║  Cell 2-1║",
  "╟─────────────╫──────────╢",
  "║     Cell 1-2║  Cell 2-2║",
  "╙─────────────╨──────────╜",
]
`;

exports[`Builder padLeft HORIZONTAL_THIN_VERTICAL_THICK [Simple 2x2] 1`] = `
[
  "┎─────────────┰──────────┒",
  "┃     Cell 1-1┃  Cell 2-1┃",
  "┠─────────────╂──────────┨",
  "┃     Cell 1-2┃  Cell 2-2┃",
  "┖─────────────┸──────────┚",
]
`;

exports[`Builder padLeft INNER_DOUBLE_OUTER_THIN [Simple 2x2] 1`] = `
[
  "┌─────────────╥──────────┐",
  "│     Cell 1-1║  Cell 2-1│",
  "╞═════════════╬══════════╡",
  "│     Cell 1-2║  Cell 2-2│",
  "└─────────────╨──────────┘",
]
`;

exports[`Builder padLeft INNER_DOUBLE_OUTER_THIN_CURVE [Simple 2x2] 1`] = `
[
  "╭─────────────╥──────────╮",
  "│     Cell 1-1║  Cell 2-1│",
  "╞═════════════╬══════════╡",
  "│     Cell 1-2║  Cell 2-2│",
  "╰─────────────╨──────────╯",
]
`;

exports[`Builder padLeft INNER_THICK_OUTER_THIN [Simple 2x2] 1`] = `
[
  "┌─────────────┰──────────┐",
  "│     Cell 1-1┃  Cell 2-1│",
  "┝━━━━━━━━━━━━━╋━━━━━━━━━━┥",
  "│     Cell 1-2┃  Cell 2-2│",
  "└─────────────┸──────────┘",
]
`;

exports[`Builder padLeft INNER_THICK_OUTER_THIN_CURVE [Simple 2x2] 1`] = `
[
  "╭─────────────┰──────────╮",
  "│     Cell 1-1┃  Cell 2-1│",
  "┝━━━━━━━━━━━━━╋━━━━━━━━━━┥",
  "│     Cell 1-2┃  Cell 2-2│",
  "╰─────────────┸──────────╯",
]
`;

exports[`Builder padLeft INNER_THIN_OUTER_DOUBLE [Simple 2x2] 1`] = `
[
  "╔═════════════╤══════════╗",
  "║     Cell 1-1│  Cell 2-1║",
  "╟─────────────┼──────────╢",
  "║     Cell 1-2│  Cell 2-2║",
  "╚═════════════╧══════════╝",
]
`;

exports[`Builder padLeft INNER_THIN_OUTER_THICK [Simple 2x2] 1`] = `
[
  "┏━━━━━━━━━━━━━┯━━━━━━━━━━┓",
  "┃     Cell 1-1│  Cell 2-1┃",
  "┠─────────────┼──────────┨",
  "┃     Cell 1-2│  Cell 2-2┃",
  "┗━━━━━━━━━━━━━┷━━━━━━━━━━┛",
]
`;

exports[`Builder padLeft THICK [Simple 2x2] 1`] = `
[
  "┏━━━━━━━━━━━━━┳━━━━━━━━━━┓",
  "┃     Cell 1-1┃  Cell 2-1┃",
  "┣━━━━━━━━━━━━━╋━━━━━━━━━━┫",
  "┃     Cell 1-2┃  Cell 2-2┃",
  "┗━━━━━━━━━━━━━┻━━━━━━━━━━┛",
]
`;

exports[`Builder padLeft THIN [Simple 2x2] 1`] = `
[
  "┌─────────────┬──────────┐",
  "│     Cell 1-1│  Cell 2-1│",
  "├─────────────┼──────────┤",
  "│     Cell 1-2│  Cell 2-2│",
  "└─────────────┴──────────┘",
]
`;

exports[`Builder padLeft THINCURVE [Simple 2x2] 1`] = `
[
  "╭─────────────┬──────────╮",
  "│     Cell 1-1│  Cell 2-1│",
  "├─────────────┼──────────┤",
  "│     Cell 1-2│  Cell 2-2│",
  "╰─────────────┴──────────╯",
]
`;
